[tool.poetry]
name = "aoc-2023"
version = "0.1.0"
description = "Jingle Bells"
authors = ["Benjamin SCHMITT <bschmitt@hellowork.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
matplotlib = "^3.8.2"
numpy = "^1.26.2"
sympy = "^1.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
